--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type" : "module",
   "scripts": {
-    "start": "node app.js",
+    "start": "node src/app.js",
     "dev" : "nodemon app.js",
     "test" : "jest"
   },
