Updated the utilis and middleware

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type" : "module",
+  "type": "module",
   "scripts": {
     "start": "node src/app.js",
-    "dev" : "nodemon app.js",
-    "test" : "jest"
+    "dev": "nodemon app.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +24,7 @@
     "mysql2": "^3.15.2",
     "nodemailer": "^7.0.9",
     "pino": "^10.1.0",
+    "pino-roll": "^4.0.0",
     "redis": "^5.8.3",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1"
