--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "event-management-and-registration-system",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.js",
   "type": "module",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon app.js",
+    "dev": "nodemon src/app.js",
     "test": "jest"
   },
   "keywords": [],
@@ -20,6 +20,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.2",
     "nodemailer": "^7.0.9",
